# factory

./: .gitignore  LICENSE  README.md  factory.code-workspace
doc/: initial-setup.md  setup-mac.md  setup-noble.md
docker/arm-multipass-jazzy/: .bashrc  .dockerignore  .env  Dockerfile  bashrc  clean.sh  docker-compose.yaml  start.sh
docker/arm-multipass-jazzy/_doc/: _readme.md
webots/: init-mac-jazzy.bash
ws/: wget-log
ws/src/: readme.md
ws/src/mobile_robot/: CMakeLists.txt  package.xml
ws/src/mobile_robot/_doc/: mobile_robot_manual.docx  mobile_robot_manual.md  read_me_first.docx
ws/src/mobile_robot/launch/: gazebo_model.launch.py
ws/src/mobile_robot/model/: robot.gazebo  robot.xacro
ws/src/mobile_robot/parameters/: bridge_parameters.yaml
ws/src/robot_arm_ctrl/: CMakeLists.txt  package.xml  robot_arm_ctrl.xml
ws/src/robot_arm_ctrl/_doc/: _readme.md
ws/src/robot_arm_ctrl/config/: controllers.yaml  jt-demo-arm.yaml  jt-demo-hand.yaml  jt-pick-arm.yaml  jt-pick-hand.yaml  robot_arm_forward_publisher.yaml  robot_hand_forward_publisher.yaml
ws/src/robot_arm_ctrl/hardware/: robot_arm_driver.cpp
ws/src/robot_arm_ctrl/hardware/include/: robot_arm_driver.hpp  visibility_control.h
ws/src/robot_arm_ctrl/launch/: display.launch.py  robot.launch.py  sim.gazebo.rviz.launch.py  sim.gz.rviz.launch.py  sim.webots.rviz.launch.py  test_forward_controller.launch.py  test_joint_trajectory_controller.launch.py  trajectory_publisher.launch.py
ws/src/robot_arm_ctrl/robot_arm_ctrl/scripts/: forward_position.py  joint_trajectory_position.py  sp_client.py  sp_node.py  sparkplugB.py  trajectory_publisher.py
ws/src/robot_arm_ctrl/rviz/: robot_arm.rviz
ws/src/robot_arm_ctrl/urdf/: macros.xacro  model.xacro  robot_arm.xacro  ros2_control.xacro
ws/src/robot_arm_ctrl/worlds/: .factory.wbproj  factory.wbt
